<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.simbora.ViagemAdd"
    tools:showIn="@layout/activity_viagem_add">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome_grupo_viagem"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ponto_partida"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">
                <RadioGroup
                    android:id="@+id/tipo_partida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@+id/partida_individual">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">
                        <RadioButton
                            android:id="@+id/partida_individual"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/partida_individual"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">
                        <RadioButton
                            android:id="@+id/partida_agrupada"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/partida_agrupada"/>
                    </LinearLayout>
                </RadioGroup>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/de"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>
            <AutoCompleteTextView
                android:id="@+id/de"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:drawableRight="@drawable/ic_location"
                android:hint="Diga seu lugar de saída" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/para"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>
            <AutoCompleteTextView
                android:id="@+id/para"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:drawableRight="@drawable/ic_location"
                android:hint="Diga seu lugar de chegada" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnSend"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
